# TestCUDA

./: .clang-format  .gitignore  CMakeLists.txt  FullConnectedNetSingleScalar.cpp  FullConnectedNetSingleScalar.h  FullConnectedNetSingleScalarGPU.cpp  FullConnectedNetSingleScalarGPU.cu  FullConnectedNetSingleScalarGPU.cuh  FullConnectedNetSingleScalarGPU.h  FullConnectedNetSingleScalarGPU2.cu  Net.cpp  Net.h  NetGPU.cpp  NetGPU.cu  NetGPU.cuh  NetGPU.h  NetGPU2.cu  bake_net.cpp  build_net.cpp  debug.sh  dnn.json  gpu_atomic.cu  gpu_presum.cpp  gpu_presum.cu  gpu_reduction.cpp  gpu_reduction.cu  gpu_seg_scan.cu  load_bake_net.cpp  main.cpp  main.cu  max_reduction.cpp  max_reduction.cu  save_json_5_digits.py  seg_scan.cpp  test_gpu_net.cpp
geometries/: AABB.cpp  AABB.h  BezierCurve.cpp  BezierCurve.h  CMakeLists.txt  DihedralAngles.cpp  DihedralAngles.h  DihedralAnglesMachine.cpp  DihedralAnglesMachine.h  FundamentalForms.cpp  FundamentalForms.h  NormalEdgeCross.cpp  ObjExport.cpp  ObjExport.h  ObjUtil.cpp  ObjUtil.h  ObjectBVH.cpp  ObjectBVH.h  Primitives.cpp  Primitives.h  TetUtil.cpp  TetUtil.h  Tetrahedron.cpp  Tetrahedron.h  Triangulator.cpp  Triangulator.h  TriangulatorDelaunay.cpp
geometries/hermite/: Hermite1D.cpp  Hermite1D.h  Hermite2D.cpp  Hermite2D.h
gpu_utils/: CMakeLists.txt  CublasUtil.cpp  CublasUtil.h  Cuda2DArray.h  CudaArray.cpp  CudaArray.h  CudaAsync.cu  CudaAsync.h  CudaDef.h  CudaDevPtr.h  CudaELLMatrix.cpp  CudaIntrinsic.cu  CudaIntrinsic.h  CudaMath.cpp  CudaMath.h  CudaMatrix.h  CudaMatrixUtil.h  CudaMemory.cpp  CudaMemory.h  CudaUtil.cu  CudaUtil.h  GPUMatrixOps.cu
utils/: BaseTypeUtil.h  CMakeLists.txt  ColorUtil.h  DefUtil.h  DepthImageSaver.cpp  EigenPrint.hpp  EigenUtil.cpp  EigenUtil.h  FileUtil.cpp  FileUtil.h  ImGuiUtil.cpp  ImGuiUtil.h  JsonUtil.cpp  JsonUtil.h  LogUtil.cpp  MathUtil.cpp  MathUtil.h  MathUtil2.cpp  PCGSolverCPU.cpp  PCGSolverCPU.h  ProfUtil.cpp  ProfUtil.h  Rand.cpp  Rand.h  RenderBaseObject.h  RenderGrid.cpp  RenderGrid.h  RenderUtil.cpp  RenderUtil.h  RotUtil.cpp  RotUtil.h  SparseUtil.h  StringUtil.cpp  StringUtil.h  TensorUtil.cpp  TensorUtil.h  TimeUtil.cpp  TimeUtil.hpp
